--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ addons:
   ssh_known_hosts: 101.200.237.78
 deploy:
   provider: script
-  script: ssh travis@101.200.237.78 && bash ./deploy_homepage.sh
+  script: ssh travis@101.200.237.78 './deploy_homepage.sh'
 before_install:
 - openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv
   -in deploy_rsa.enc -out deploy_rsa -d
